# arbor

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  dev.sh  package-lock.json  package.json  setup_graphiti.sh  vite.config.ts
.claude/: launch.json
.github/workflows/: build-installers.yml  build-macos.yml  build.yml
backend/: bunfig.toml  package.json  tsconfig.json
backend/native/: ocr.swift
backend/src/: paths.ts  server.test.ts  server.ts
backend/src/agent/: providers.ts  run.ts  tools.test.ts  tools.ts
backend/src/cleanup/: arrange.test.ts  arrange.ts
backend/src/kb/: chunk.test.ts  chunk.ts  cloud-ocr.ts  contextualize.ts  diag.ts  embeddings.ts  index.ts  loaders.ts  mcp-client.test.ts  mcp-client.ts  rerank.ts  server-process.ts  smoke.ts  store.ts  vision.ts
backend/src/rag/: embeddings.ts  index.ts  loaders.ts  vision.ts
backend/src/routes/: agent.test.ts  agent.ts  blobs.test.ts  blobs.ts  canvases.ts  cleanup.test.ts  cleanup.ts  files.ts  kb.test.ts  kb.ts  keys.ts  ollama.ts  rag.test.ts  rag.ts  settings.ts  store.test.ts  test-setup.ts  test-utils.ts
backend/src/store/: db.ts  import-legacy.test.ts  schema.ts  (+1 more)
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src-tauri/: .gitignore  Cargo.toml  research_note.txt  tauri.conf.json  tcp_notes.txt  udp_notes.txt
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend.rs  lib.rs
scripts/: build-macos.sh  build-windows.bat  build-windows.ps1  cleanup-storage.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  rag.rs  sidecar.rs  store.rs
src/lib/: files.test.ts  files.ts  web.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+56 files in other folders)
