[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
# Spawns + talks to the pi agent sidecar over stdio.
tauri-plugin-shell = "2"
# macOS Keychain for API key storage.
# keyring v3 makes the OS backend opt-in — without "apple-native" it silently
# uses an in-memory mock store that doesn't persist across runs.
keyring = { version = "3", features = ["apple-native"] }
# async runtime for Tauri commands
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
# Per-canvas RAG: on-device embeddings + PDF text extraction.
fastembed = "4"
pdf-extract = "0.7"
base64 = "0.22"
