[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
window-vibrancy = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
